--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-custom: https://stb.mbahnunungonline.net/vs1.m3u8
+custom: https://stb.mbahnunungonline.net
